fixed right-side color box alignment

--- a/css/landing-page/color-options.css
+++ b/css/landing-page/color-options.css
@@ -10,6 +10,7 @@
 
 #colors-options .left-side{
     width: 60%;
+    text-align: center;
 }
 
 #colors-options .left-side img {
@@ -23,15 +24,23 @@
 #colors-options .right-side{
     width: 40%;
     display: inline-block;
-    padding-left: 100px;
+    margin-left: 100px;
 }
 
 #colors-options .right-side .swatch-colors{
     background: white; 
     padding: 20px;
+    height: 100px;
+    margin-bottom: 30px;
 }
 
 #colors-options .right-side .swatch-colors .circle{
     width: 70px;
     height: 70px;
+    display: inline-block;
+}
+
+#colors-options .collection-box {
+    text-align: center; 
+    padding: 20px;
 }
